Update Code to java 17: remove collectors