@@ -3,7 +3,6 @@ package com;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * @author KOTBI Abderrahmane
@@ -27,18 +26,13 @@ public class Search {
     var res = new ArrayList<List<String>>();
     Arrays.sort(products);
     var targetList = Arrays.asList(products);
-    res.add(
-        targetList.stream()
-            .filter((e) -> e.indexOf(searchWord.charAt(0)) == 0)
-            .collect(Collectors.toList()));
+    res.add(targetList.stream().filter((e) -> e.indexOf(searchWord.charAt(0)) == 0).toList());
     for (i = 1; i < searchWord.length(); i++) {
       res.add(
           res.get(i - 1).stream()
               .filter(e -> (i < e.length()) && e.charAt(i) == searchWord.charAt(i))
-              .collect(Collectors.toList()));
+              .toList());
     }
-    return res.stream()
-        .map((e) -> e.stream().limit(3).collect(Collectors.toList()))
-        .collect(Collectors.toList());
+    return res.stream().map((e) -> e.stream().limit(3).toList()).toList();
   }
 }
